# skills-marketplace-starter

./: .gitignore  AGENTS.md  LICENSE  README.md
code/app/: .env.example  README.md  instrumentation-client.ts  instrumentation.ts  next.config.ts  package-lock.json  package.json
code/app/app/: globals.css  layout.tsx  page.tsx
code/app/components/: AnchorScrollLink.tsx  CliInstallHint.tsx  CopyCommand.tsx  DetailTabs.tsx  DevModeContext.tsx  DevPlaceholder.tsx  DevTools.tsx  HeroDemo.tsx  HeroInstallCommand.tsx  HeroPublishWall.tsx  HomeHero.tsx  Navbar.tsx  ScrollOnSearch.tsx  ScrollToTopOnMount.tsx  SearchForm.tsx  SkillAccessControls.tsx  SkillActions.tsx  SkillCard.tsx  SkillFeedbackPanel.tsx  SkillManagePanel.tsx  SkillMetadataFields.tsx  SkillPackagePicker.tsx  Toc.tsx  TocDrawer.tsx  TocFixed.tsx
code/app/lib/: access-labels.ts  alerts.ts  api.ts  author.ts  cli-release.ts  db.ts  emoji.ts  format.ts  highlight.tsx  home-guide-state.ts  origin.ts  parse-skill.ts  seed-skills.ts  skill-display.ts  (+9 more)
code/cli/: README.md  pyproject.toml
code/cli/src/agent_skills/: agent_detect.py  api.py  config.py  credentials.py  installer.py  main.py  packager.py  state.py
docs/: ARCHITECTURE.md  CLI.md  DEPLOYMENT.md  OPEN_SOURCE_STARTER_SPEC.md  QUICKSTART.md  SECURITY.md  SKILL_AUTHORING.md  TEST.md
docs/design-drafts/: skills-marketplace-value-demo.html
scripts/: agent-skills-local  build-cli-release.sh  package-runtime-data.sh
skills/hello-world/: SKILL.md
skills/marketplace-guide/: SKILL.md
skills/report-writer/: SKILL.md
skills/skill-creator/: SKILL.md
(+63 files in other folders)
