[project]
name = "agent-skills"
version = "0.1.0"
description = "CLI for Skills Marketplace Starter"
readme = "README.md"
authors = [
    { name = "Skills Marketplace Starter contributors" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "tomli>=2",
    "tomli-w>=1",
    "python-frontmatter>=1",
]

[project.scripts]
agent-skills = "agent_skills.main:app"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
